Add new SVG icons to resources/images/icons directory
Introduced a collection of SVG icons, including `youtube_i.svg`, `messenger.svg`, `menu.svg`, `card.svg`, `user.svg`, `close.svg`, `arrow.svg`, `burger.svg`, `icon1.svg`, `unisex.svg`, `search.svg`, `phone_i.svg`, `add_fav.svg`, and `checked_ol.svg`. These additions provide enhanced support for various UI elements and improve design flexibility.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,7 +19,19 @@
     --color-danger: #FD3333;
     --color-charcoal: #020202;
     --color-light-charcoal: #F8F7F2;
+    --color-light-border: #EEEEEE;
 
+}
+@utility pt-section {
+    padding-top: 50px;
+
+    @variant sm {
+        padding-top: 80px;
+    }
+
+    @variant lg {
+        padding-top: 100px;
+    }
 }
 @utility container {
     padding-inline: 10px;
@@ -44,4 +56,12 @@
     font-family: "Onest", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+}
+
+.light_border{
+    @apply border border-light-border rounded-2xl
+}
+
+.animated{
+    @apply transition-all ease-in-out duration-500
 }
