Enhance header and UI components for better user interaction
- Integrated `UserDropdown` Vue component with account-related functionality.
- Added tooltips and hover effects for dynamic feedback in `header.blade.php`.
- Improved `product-card` design with a tooltip for "Save to Favorites".
- Refactored layout and styling in `home-page.blade.php` for improved responsiveness.
- Introduced `SimpleButton` Vue component for reusable button styling.
- Updated `app.js` for dynamic import of new components.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -65,3 +65,9 @@
 .animated{
     @apply transition-all ease-in-out duration-500
 }
+
+.add_favorite:hover{
+   .tooltip{
+        opacity: 1;
+    }
+}
