--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -50,7 +50,7 @@
     }
 }
 @utility container {
-    padding-inline: 10px;
+    padding-inline: 16px;
     margin-inline: auto;
     max-width: 100vw;
     @variant sm {
@@ -58,12 +58,12 @@
     }
 
     @variant lg {
-        padding-inline: 50px;
+        padding-inline: 30px;
     }
 
     @variant xl {
         max-width: 1422px;
-        padding-inline: 80px;
+        padding-inline: 40px;
 
     }
 }
@@ -76,6 +76,23 @@
 
 .light_border{
     @apply border border-light-border rounded-2xl
+}
+
+.button {
+    box-shadow: 0 4px 80px 0 #00000033,
+    -8px 0 60px 0 #A3BC5933,
+    -8px 0 120px 0 #A3BC5933,
+    -8px 0 250px 0 #A3BC590D,
+    -8px 0 250px 0 #A3BC590D,
+    -8px 0 250px 0 #A3BC5933,
+    -8px 0 1250px 0 #A3BC5933;
+
+    @apply w-fit flex items-center justify-center gap-2;
+    @apply cursor-pointer rounded-xl;
+    @apply text-sm text-white font-bold;
+    @apply md:text-base;
+    @apply bg-olive hover:bg-dark-olive;
+    @apply transition-colors duration-300 ease-in-out;
 }
 
 .animated{
