Add favorite functionality, size guide, and enhanced sliders
Implemented favorite functionality using cookies, enabling users to save and toggle favorite products. Added a `SizeGuide` component integrating size chart with modal UI for better user experience. Enhanced product sliders with thumbnail previews, autoplay, and lazy loading for improved interactivity and performance. Updated package dependencies to include `js-cookie`, `@heroicons/vue`, and `@headlessui/vue`. Refined layouts, hover effects, and animations for consistency and responsiveness.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -8,7 +8,9 @@
 [x-cloak] {
     display: none !important;
 }
-
+/*html {*/
+/*    scrollbar-gutter: stable;*/
+/*}*/
 @theme {
 
     --color-light-orange: #F8F7F2;
@@ -63,7 +65,8 @@
 
     @variant xl {
         max-width: 1422px;
-        padding-inline: 40px;
+        /*padding-inline: 40px;*/
+        padding:0 40px ;
 
     }
 }
@@ -101,6 +104,16 @@
 
 .add_favorite:hover{
    .tooltip{
+        opacity: 1;
+    }
+}
+.page-fade {
+    opacity: 0;
+    animation: fade-in .8s ease-out forwards;
+}
+
+@keyframes fade-in {
+    to {
         opacity: 1;
     }
 }
