Remove `contactUs.vue` and migrate its functionality to Blade templates with reusable components for form fields and styles. Update terms page with detailed sections and styled lists.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -140,3 +140,10 @@
         opacity: 1;
     }
 }
+ul.markers{
+    list-style-image: url('../images/icons/list_marker.png');
+
+    li>p{
+        opacity: 80%;
+    }
+}
